--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <input type="text" id="fname" name="fname"><br><br>
     <label for="lname">Last name:</label>
     <input type="text" id="lname" name="lname"><br><br>
+    <label for="email">Email Address:</label>
+    <input type="email" id="email" name="email"><br><br>
     <input type="submit" value="Submit">
   </form>
 </body>
