complete boilerplate local db

--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,13 @@
     <input type="email" id="email" name="email"><br><br>
     <input type="submit" value="Submit">
   </form>
+
+<section>
+  <div>
+    <ul id="users"></ul>
+  </div>
+</section>
+
+
 </body>
 </html>
